[tool.poetry]
name = "binance-technical-challenge"
version = "0.1.0"
description = ""
authors = ["pomcho555 <ono.fda03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
binance-connector = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
