[tool.poetry]
name = "binance-technical-challenge"
version = "0.1.0"
description = ""
authors = ["pomcho555 <ono.fda03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
binance-connector = "^1.13.0"
fastapi = "^0.78.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
prometheus-client = "^0.14.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E501"
max-complexity = 10
